fixed text on small screen

--- a/file.css
+++ b/file.css
@@ -284,8 +284,7 @@ h5 {
       color: #3F51B5;
    }
    .header-text {
-      width: 20rem;
-      height: auto;
+      width: unset;
       font-size: 4vw;
    }
    .input-field {
@@ -317,7 +316,7 @@ h5 {
       height: auto;
    }
    .icons p {
-      width: 220px;
+      width: unset;
    }
    .splash img {
      width: 100%;
